[package]
name = "s3-bucket-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
aws-config = "0.6.0"
aws-sdk-s3 = "0.6.0"
base64ct = { version = "1.3.3", features = ["alloc"] }
bytes = "1.1.0"
env_logger = "0.9.0"
futures = "0.3"
log = "0.4.14"
md-5 = "0.10.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
walkdir = "2.3.2"
